--- a/index.html
+++ b/index.html
@@ -3,102 +3,40 @@
 		<head>
 			<meta charset="utf-8" />
 			<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-			<title>WPC: Dragon Boat Loader</title>
+			<title>Dragon Boat Loader</title>
 			<link rel="stylesheet" href="stylesheets/app.css" />
-			<script src="bower_components/modernizr/modernizr.js"></script>
 	</head>
 	<body>
 		<div class="row">
 			<div class="large-12 columns text-center">
-				<h1>WPC: Dragon Boat Loader</h1>
+				<h1>Dragon Boat Loader</h1>
 			</div>
 		</div><br/>
-		<div class="row">
-			<div class="large-12 columns">
-				<div class="panel text-center">
-					<div class="row">
-						<div class="large-6 columns">
-							<h3>Sign Up</h3>
-							<hr/>
-							<div class="row">
-								<div class="large-12 columns text-center">
-									<div style="width: 300px; margin: 0 auto;">
-										<label>Email:</label>
-										<input type="text" name="email" />
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="large-12 columns text-center">
-									<div style="width: 300px; margin: 0 auto;">
-										<label>Password:</label>
-										<input type="password" name="password" />
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="large-12 columns text-center">
-									<div style="width: 300px; margin: 0 auto;">
-										<label>Confirm Password:</label>
-										<input type="password" name="confirm_password" />
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="large-12 columns text-center">
-									<div style="width: 300px; margin: 0 auto;">
-										<input type="submit" value="Sign Up" class="button" />
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="large-6 columns">
-							<h3>Log In</h3>
-							<hr/>
-							<div class="row">
-								<div class="large-12 columns text-center">
-									<div style="width: 300px; margin: 0 auto;">
-										<label>Email:</label>
-										<input type="text" name="email" />
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="large-12 columns text-center">
-									<div style="width: 300px; margin: 0 auto;">
-										<label>Password:</label>
-										<input type="password" name="password" />
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="large-12 columns text-center">
-									<div style="width: 300px; margin: 0 auto;">
-										<input type="submit" value="Log In" class="button" />
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+		<div class="row" data-ng-view data-ng-controller="BoatController">
 		</div>
 		<script src="bower_components/jquery/jquery.js"></script>
-		<script src="/bower_components/modernizr/modernizr.js"></script>
+		<script src="bower_components/modernizr/modernizr.js"></script>
 		<script src="bower_components/foundation/js/foundation.min.js"></script>
-		<script src="/bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
+		<script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
 		<!-- AngularJS files -->
-		<script src="/bower_components/angularjs-file-upload/angular-file-upload-shim.min.js"></script>
-		<script src="/bower_components/angular/angular.min.js"></script>
-		<script src="/bower_components/angularjs-file-upload/angular-file-upload.min.js"></script>
-		<script src="/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-		<script src="/bower_components/angular-resource/angular-resource.min.js"></script>
-		<script src="/bower_components/angular-route/angular-route.min.js"></script>
-		<script src="/bower_components/momentjs/min/moment.min.js "></script>
-		<script src="/bower_components/ng-csv/build/ng-csv.js"></script>
-		<script src="/bower_components/angular-ui-date/src/date.js"></script>
-		<script src='/bower_components/angular-ui-utils/modules/route/route.js'></script>
-		
+		<script src="bower_components/angularjs-file-upload/angular-file-upload-shim.min.js"></script>
+		<script src="bower_components/angular/angular.min.js"></script>
+		<script src="bower_components/angularjs-file-upload/angular-file-upload.min.js"></script>
+		<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+		<script src="bower_components/angular-resource/angular-resource.min.js"></script>
+		<script src="bower_components/angular-route/angular-route.min.js"></script>
+		<script src="bower_components/momentjs/min/moment.min.js "></script>
+		<script src="bower_components/ng-csv/build/ng-csv.js"></script>
+		<script src="bower_components/angular-ui-date/src/date.js"></script>
+		<script src="bower_components/angular-ui-utils/modules/route/route.js"></script>
+		<script src="//cdn.firebase.com/v0/firebase.js"></script>
+		<script src="//cdn.firebase.com/libs/angularfire/0.5.0/angularfire.min.js"></script>
+		<script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
+		<!-- Project Files -->
 		<script src="js/app.js"></script>
+		<script src="js/config.js"></script>
+		<script src="js/directives/fileUpload.js"></script>
+		<script src="js/controllers/boat.js"></script>
+		<script src="js/init.js"></script>
 	</body>
 </html>
