Added csv uploader and support to parse csv to object

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="bower_components/angular-route/angular-route.min.js"></script>
 		<script src="bower_components/momentjs/min/moment.min.js "></script>
 		<script src="bower_components/ng-csv/build/ng-csv.js"></script>
+		<script src="bower_components/jquery-csv/src/jquery.csv.js"></script>
 		<script src="bower_components/angular-ui-date/src/date.js"></script>
 		<script src="bower_components/angular-ui-utils/modules/route/route.js"></script>
 		<script src="//cdn.firebase.com/v0/firebase.js"></script>
